Fixed guild button not showing everytime, css pixelised effect button

--- a/www/app/assets/stylesheets/guilds.scss
+++ b/www/app/assets/stylesheets/guilds.scss
@@ -89,8 +89,20 @@ input {
   font-size: 16px;
   cursor: pointer;
 }
+@keyframes pixelate {
+  0% {
+    background-position-y: 0;
+  }
+  100% {
+    background-position-y: 100%;
+  }
+}
 .button:hover {
-  background-color: green;
+  // background-color: green;
+  background: green url(pixel_green.svg);
+  transition-delay: 0.6s;
+  background-size: 180px;
+  animation: pixelate 0.5s steps(8) forwards;
 }
 .cursorButton {
   cursor: pointer;
@@ -105,22 +117,12 @@ input {
   text-align: center;
   border-width: 1px;
 }
-.guildRow, .myGuildRow {
-  /* Animation on hover guild row */
-  background: linear-gradient(to right, darkgray 50%, black 50%);
-  background-size: 200% 100%;
-  background-position: right bottom;
-  transition: all 1s ease;
-}
 .guildRow:nth-child(odd)/*, .guildInviteRow:nth-child(odd), .guildMemberRow:nth-child(odd)*/ {
   background-color: darkgrey;
 }
 .guildRow:nth-child(odd) {
   /* Animation on hover guild row */
-  background: linear-gradient(to right, black 50%, darkgray 50%);
-  background-size: 200% 100%;
-  background-position: right bottom;
-  transition: all 1s ease;
+  background-color: darkgrey;
 }
 .myGuildRow {
   border-style: solid;
@@ -135,9 +137,17 @@ input {
 .guildRow:last-child, .guildInviteRow:last-child, .guildMemberRow:last-child {
   border-bottom: solid;
 }
-.myGuildRow:hover, .guildRow:hover {
-  background-position: left bottom;
-  // background-color: darkgray;
+.myGuildRow:hover, .guildRow:nth-child(even) {
+  background: darkgrey url(pixel_darkgrey.svg);
+  transition-delay: 0.6s;
+  background-size: 180px;
+  animation: pixelate 0.5s steps(8) forwards;
+}
+.guildRow:nth-child(odd) {
+  background: black url(pixel_black.svg);
+  transition-delay: 0.6s;
+  background-size: 180px;
+  animation: pixelate 0.5s steps(8) forwards;
 }
 .uppercase {
   text-transform: uppercase;
